05 May 2014, version 1.0.1:
    * All unit tests are now enabled and use the package testthat. Install the package with argument INSTALL_opt = "--install-tests" supplied to install.packages to install the tests. The tests can be run after installation with test_package('nloptr'). The testthat package needs to be installed and loaded to be able to run the tests.
    * Changed default value for maxtime option from 0.0 to -1.0. In some cases nloptr returned NLOPT_MAXTIME_REACHED without running any iterations with the default setting. This change solves this.
    * Replaced cat by message or warning. Messages can be suppressed by suppressMessages.

27 January 2014, version 1.0.0:
    * Merged wrappers from the 'nloptwrap' package.

19 November 2013, version 0.9.6:
    * Added a line in Makevars to replace some code in NLopt to fix compilation on Solaris as requested by Brian Ripley.

12 November 2013, version 0.9.5:
    * Updated references from NLopt version 2.3 to NLopt version 2.4 in installation instructions in INSTALL.windows.
    * Added a line in Makevars that replaces some code related to type-casting in NLopt-2.4/isres/isres.c.
    * Changed encoding of src/nloptr.c from CP1252 to UTF-8.    

09 November 2013, version 0.9.4:
    * Updated NLopt to version 2.4.
    * Changed tests to use unit testing package testthat (these are currently disabled).
    * Fixed a segfault that started to occur on the latest version of Ubuntu.
    * Slightly changed the build process (Removed -lstdc++ from linker statement. A file dummy.cpp (with C++ extension)
      is added to the source directory to ensure linking with C++. Thanks to Brian Ripley for bringing this up.)

31 July 2013, version 0.9.3:
    * Split lines longer than 100 characters in check.derivatives examples in two lines to comply with new package rules.
    * Moved vignettes from inst/doc to vignettes to comply with new package rules.